Produced index.js from transpiled.js which was created by babel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div class="react-root" id="react-app"></div>
-    <script src="/build/bundle.js" type="application/javascript"></script>
+    <script src="/index.js" type="application/javascript"></script>
 </body>
 </html>
